--- a/sass/_customVariables.scss
+++ b/sass/_customVariables.scss
@@ -23,7 +23,16 @@ $overlay-white: rgba(255,255,255,0.6);
 
 
 //fonts
+$font-raleway: "Raleway", sans-serif;
 
+$font-stag-body: "Stag Light", serif;
+$font-stag-bold: "Stag Semibold", serif;
+
+$font-helvetica: "Helvetica LT Std", sans-serif;
+  //helvetica light for testing, can delete when we know which one looks best on screen
+$font-helvetica-light: "Helvetica LT Std Light", sans-serif;
+
+  //old font variables DELETE WHEN ALL FONTS REPLACED
 $font-din: "din_alternatebold", sans-serif;
 $font-velino-thin: "velino_text_thinthin", serif;
 $font-velino-text: "velino_text_blackblack", serif;
