--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -9,7 +9,7 @@
 		url('../fonts/Stag-Light.woff2') format('woff2'),
 		url('../fonts/Stag-Light.woff') format('woff'),
 		url('../fonts/Stag-Light.svg#Stag-Light') format('svg');
-    font-weight: normal;
+    font-weight: 300;
     font-style: normal;
     font-stretch: normal;
     unicode-range: U+0020-00FE;
@@ -22,7 +22,7 @@
 		url('../fonts/Stag-LightItalic.woff2') format('woff2'),
 		url('../fonts/Stag-LightItalic.woff') format('woff'),
 		url('../fonts/Stag-LightItalic.svg#Stag-LightItalic') format('svg');
-    font-weight: normal;
+    font-weight: 300;
     font-style: italic;
     font-stretch: normal;
     unicode-range: U+0020-00FE;
@@ -35,7 +35,7 @@
 		url('../fonts/Stag-Semibold.woff2') format('woff2'),
 		url('../fonts/Stag-Semibold.woff') format('woff'),
 		url('../fonts/Stag-Semibold.svg#Stag-Semibold') format('svg');
-    font-weight: bold;
+    font-weight: 600;
     font-style: normal;
     font-stretch: normal;
     unicode-range: U+0020-00FE;
@@ -48,7 +48,7 @@
 		url('../fonts/Stag-SemiboldItalic.woff2') format('woff2'),
 		url('../fonts/Stag-SemiboldItalic.woff') format('woff'),
 		url('../fonts/Stag-SemiboldItalic.svg#Stag-SemiboldItalic') format('svg');
-    font-weight: bold;
+    font-weight: 600;
     font-style: italic;
     font-stretch: normal;
     unicode-range: U+0020-00FE;
